@@ -1,6 +1,6 @@
 # Make cantools.					-*-Makefile-*-
 
-# Copyright (C) 2007-2013 Andreas Heitmann
+# Copyright (C) 2007-2014 Andreas Heitmann
 
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
